k8s/resources/study/gridadmin-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gridadmin-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/configuration-snippet: |
      # our containers host at '/' so can't possibly make a difference between
      # '/XXX/' and '/XXX' (trailing slash) (which would respectively become
      # '/' and '' inside the container but an empty path doesn't exist in http)
      # so always redirect '/XXX' to '/XXX/' in the client outside the container
      rewrite ^/gridadmin$ /gridadmin/ permanent;

      # using this instead of standard rewrite as a workaround to avoid decoding slashes in urls
      # we sometimes have ids in the urls that contain properly encoded slashes
      if ($request_uri ~ "^/gridadmin(/.*)") {
        proxy_pass http://upstream_balancer$1;
        break;
      }
spec:
  rules:
  - http:
      paths:
      - path: /gridadmin(/|$)
        pathType: Prefix
        backend:
          service:
            name: gridadmin-app
            port:
              number: 80
